--- a/app_node/src/Utils/Email/Templates/resetPasswordRequest.hbs
+++ b/app_node/src/Utils/Email/Templates/resetPasswordRequest.hbs
@@ -6,7 +6,8 @@
     <body>
         <p>Hi {{username}},</p>
         <p>You requested to reset your password.</p>
-        <p> Please, click the link below to reset your password</p>
-        <a href="{{link}}">{{link}} If you cannot open this link, Please copy and paste it on your browser</a>
+        <p>Please, click the link below to reset your password</p>
+        <a href="{{link}}">{{link}}</a>
+        <p>If you cannot open this link, Please copy and paste it on your browser</p>
     </body>
 </html>
